[gd_scene load_steps=4 format=3 uid="uid://hdvr1a3cde46"]

[ext_resource type="Script" path="res://Scenes/Windows/Goto.gd" id="1_k04k1"]
[ext_resource type="Theme" uid="uid://cd3wy0ejn28l0" path="res://Assets/Popups.tres" id="2_lbg03"]
[ext_resource type="Texture2D" uid="uid://dwbicf3xmqxgd" path="res://Assets/starback.png" id="3_ppu2i"]

[node name="Goto" type="Window"]
auto_translate_mode = 1
title = "Go to..."
initial_position = 1
size = Vector2i(300, 100)
script = ExtResource("1_k04k1")
_lineEdit = NodePath("Control/CenterContainer/VBoxContainer/LineEdit")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lbg03")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_ppu2i")

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -29.0
offset_right = 56.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Go to position:"

[node name="LineEdit" type="LineEdit" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
select_all_on_focus = true

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="OK" type="Button" parent="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
